--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,9 @@
 [submodule "External/paho.mqtt.cpp"]
 	path = External/paho.mqtt.cpp
 	url = https://github.com/eclipse/paho.mqtt.cpp.git
+[submodule "External/open62541"]
+	path = External/open62541
+	url = https://github.com/open62541/open62541.git
+[submodule "External/libmodbus"]
+	path = External/libmodbus
+	url = https://github.com/stephane/libmodbus.git
